Added the login functionality. with some validations.

--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -58,7 +58,32 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
+.Absolute-Center {
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+}
 
+.Absolute-Center.is-Responsive {
+    height: 50%;
+}
+.panel{
+    border: 1px solid;
+    border-radius: 2px;
+    border-color:#fff;
+}
+.panel-body {
+    color:white;
+    background-color:#008B8B;
+}
+.panel-heading {
+    color:white;
+    border-bottom: 1px solid;
+    background-color:#008B8B;
+}
+.loginBtn{
+    background-color:#008B8B;
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
@@ -76,4 +101,8 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+.help-block {
+    color: red;
 }
